// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main test suite should render properly in JSON 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        Object {
          "position": "relative",
        },
      ]
    }
  >
    <RCTScrollView
      horizontal={true}
      style={
        Object {
          "backgroundColor": "#1F2937",
        }
      }
    >
      <View>
        <RCTScrollView
          nestedScrollEnabled={true}
          style={
            Object {
              "paddingBottom": 20,
              "paddingHorizontal": 16,
              "paddingTop": 20,
            }
          }
        >
          <View>
            <View
              className=""
              style={
                Object {
                  "backgroundColor": "#1F2937",
                  "padding": 5,
                }
              }
            >
              <View
                className=""
                style={
                  Object {
                    "marginLeft": 0,
                    "paddingBottom": 5,
                    "paddingLeft": 0,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                    }
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                      }
                    }
                  >
                    <View
                      className=""
                      style={
                        Object {
                          "flexDirection": "row",
                          "paddingLeft": 0,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <Text
                        className=""
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "fontSize": 15,
                            "marginLeft": 0,
                            "transform": Array [
                              Object {
                                "rotate": "90deg",
                              },
                            ],
                          }
                        }
                      >
                        ▶
                      </Text>
                    </View>
                  </View>
                  <Text
                    className=""
                    onPress={[Function]}
                    style={
                      Object {
                        "color": "#F9FAFB",
                        "flexDirection": "row",
                      }
                    }
                  />
                  <Text
                    className=""
                    onPress={[Function]}
                    style={
                      Object {
                        "color": "#06B6D4",
                        "marginLeft": 5,
                      }
                    }
                  >
                    <Text>
                      <Text
                        className=""
                        style={Object {}}
                      >
                        {}
                      </Text>
                       
                      7 keys
                    </Text>
                  </Text>
                </View>
                <View
                  className=""
                  style={
                    Object {
                      "marginLeft": 10,
                    }
                  }
                >
                  <View
                    className=""
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessible={true}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          className=""
                          style={
                            Object {
                              "flexDirection": "row",
                              "paddingLeft": 0,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <Text
                            className=""
                            style={
                              Object {
                                "color": "#F9FAFB",
                                "fontSize": 15,
                                "marginLeft": 0,
                                "transform": Array [
                                  Object {
                                    "rotate": "0deg",
                                  },
                                ],
                              }
                            }
                          >
                            ▶
                          </Text>
                        </View>
                      </View>
                      <Text
                        className=""
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      />
                      <Text
                        className=""
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text
                            className=""
                            style={Object {}}
                          >
                            {}
                          </Text>
                           
                          1 key
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    className=""
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessible={true}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          className=""
                          style={
                            Object {
                              "flexDirection": "row",
                              "paddingLeft": 0,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <Text
                            className=""
                            style={
                              Object {
                                "color": "#F9FAFB",
                                "fontSize": 15,
                                "marginLeft": 0,
                                "transform": Array [
                                  Object {
                                    "rotate": "0deg",
                                  },
                                ],
                              }
                            }
                          >
                            ▶
                          </Text>
                        </View>
                      </View>
                      <Text
                        className=""
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      />
                      <Text
                        className=""
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text
                            className=""
                            style={Object {}}
                          >
                            {}
                          </Text>
                           
                          1 key
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    className=""
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 3,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <Text
                        className=""
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      />
                      <Text
                        className=""
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text
                            className=""
                            style={Object {}}
                          >
                            {}
                          </Text>
                           
                          0 keys
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    className=""
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 3,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <Text
                        className=""
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      />
                      <Text
                        className=""
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text
                            className=""
                            style={Object {}}
                          >
                            {}
                          </Text>
                           
                          0 keys
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    className=""
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessible={true}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          className=""
                          style={
                            Object {
                              "flexDirection": "row",
                              "paddingLeft": 0,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <Text
                            className=""
                            style={
                              Object {
                                "color": "#F9FAFB",
                                "fontSize": 15,
                                "marginLeft": 0,
                                "transform": Array [
                                  Object {
                                    "rotate": "0deg",
                                  },
                                ],
                              }
                            }
                          >
                            ▶
                          </Text>
                        </View>
                      </View>
                      <Text
                        className=""
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      />
                      <Text
                        className=""
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text
                            className=""
                            style={Object {}}
                          >
                            {}
                          </Text>
                           
                          14 keys
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    className=""
                    style={
                      Object {
                        "marginLeft": 7,
                        "paddingBottom": 5,
                        "paddingLeft": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                        }
                      }
                    >
                      <View
                        accessible={true}
                        focusable={true}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "opacity": 1,
                          }
                        }
                      >
                        <View
                          className=""
                          style={
                            Object {
                              "flexDirection": "row",
                              "paddingLeft": 0,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <Text
                            className=""
                            style={
                              Object {
                                "color": "#F9FAFB",
                                "fontSize": 15,
                                "marginLeft": 0,
                                "transform": Array [
                                  Object {
                                    "rotate": "0deg",
                                  },
                                ],
                              }
                            }
                          >
                            ▶
                          </Text>
                        </View>
                      </View>
                      <Text
                        className=""
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#F9FAFB",
                            "flexDirection": "row",
                          }
                        }
                      />
                      <Text
                        className=""
                        onPress={[Function]}
                        style={
                          Object {
                            "color": "#4D7C0F",
                            "marginLeft": 5,
                          }
                        }
                      >
                        <Text>
                          <Text
                            className=""
                            style={Object {}}
                          >
                            {}
                          </Text>
                           
                          1 key
                        </Text>
                      </Text>
                    </View>
                  </View>
                  <View
                    className=""
                    style={
                      Object {
                        "flexDirection": "row",
                        "marginLeft": 10,
                      }
                    }
                  >
                    <Text
                      className=""
                      style={
                        Object {
                          "color": "#F9FAFB",
                          "flexDirection": "row",
                          "marginBottom": 8,
                        }
                      }
                    />
                    <Text
                      className=""
                      style={
                        Object {
                          "color": "#4D7C0F",
                          "marginLeft": 5,
                        }
                      }
                    >
                      "https://postman-echo.com/post?query=some%20really%20long%20query%20that%20goes%20onto%20multiple%20lines%20so%20we%20can%20test%20what%20happens"
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RCTScrollView>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Main test suite should render properly in raw 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        Object {
          "position": "relative",
        },
      ]
    }
  >
    <RCTScrollView
      horizontal={true}
      style={
        Object {
          "backgroundColor": "#1F2937",
        }
      }
    >
      <View>
        <RCTScrollView
          nestedScrollEnabled={true}
          style={
            Object {
              "paddingBottom": 20,
              "paddingHorizontal": 16,
              "paddingTop": 20,
            }
          }
        >
          <View />
        </RCTScrollView>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`Main test suite should render properly without title 1`] = `
<View
  style={
    Object {
      "height": "100%",
      "left": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "top": 0,
          "width": "100%",
        },
        Object {
          "position": "relative",
        },
      ]
    }
  >
    <RCTScrollView
      horizontal={true}
      style={
        Object {
          "backgroundColor": "#1F2937",
        }
      }
    >
      <View>
        <RCTScrollView
          nestedScrollEnabled={true}
          style={
            Object {
              "paddingBottom": 20,
              "paddingHorizontal": 16,
              "paddingTop": 20,
            }
          }
        >
          <View />
        </RCTScrollView>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
